test/libyul/yulSyntaxTests/objects/subobject_first.yul
object "A" {
  object "B" {
    code {}
  }

  code {}
}
// ----
// ParserError 4846: (15-21='object'): Expected keyword "code".
